--- a/app/index.html
+++ b/app/index.html
@@ -2,16 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Unique</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<header class="header">
-    <div class="container">
 
+<header class="header">
+    <div class="wrapper wrapper--header">
+        <div class="container container--flex">
+            <div class="header__logo">
+                <a href="#" class="logo">Business Name</a>
+            </div>
+            <div class="header__nav">
+                <div class="hamburger">
+                    <span class="hamburger__line"></span>
+                    <span class="hamburger__line"></span>
+                    <span class="hamburger__line"></span>
+                </div>
+                <ul class="nav">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Servises</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">About</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Portfolio</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Testimonials</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </header>
 
+<div class="banner">
+    <div class="single-item">
+        <div><img src="img/Untitled-1.png" alt=""></div>
+        <div><img src="img/Untitled-1.png" alt=""></div>
+        <div><img src="img/Untitled-1.png" alt=""></div>
+    </div>
+    <div class="banner__content">
+        <div class="container container--banner">
+            <h1 class="banner__heading">Simple,Fresh & Unique Design</h1>
+            <p class="banner__paragraph">Donec posuere augue venenatis,</p>
+            <button class="banner__button">Show more</button>
+        </div>
+    </div>
+</div>
 
 <script src="js/libs.min.js"></script>
 <script src="js/common.js"></script>
