--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Unique</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
 <header class="header">
     <div class="wrapper wrapper--header">
         <div class="container container--flex">
@@ -53,9 +52,9 @@
 
 <div class="banner">
     <div class="single-item">
-        <div><img src="img/Untitled-1.png" alt=""></div>
-        <div><img src="img/Untitled-1.png" alt=""></div>
-        <div><img src="img/Untitled-1.png" alt=""></div>
+        <div><img src="img/bunner-img.jpg" alt=""></div>
+        <div><img src="img/bunner-img1.jpg" alt=""></div>
+        <div><img src="img/bunner-img2.jpg" alt=""></div>
     </div>
     <div class="banner__content">
         <div class="container container--banner">
