added about block

--- a/app/index.html
+++ b/app/index.html
@@ -59,9 +59,164 @@
     <div class="banner__content">
         <div class="container container--banner">
             <h1 class="banner__heading">Simple,Fresh & Unique Design</h1>
-            <p class="banner__paragraph">Donec posuere augue venenatis,</p>
+            <p class="banner__subtitle">Donec posuere augue venenatis,</p>
             <button class="banner__button">Show more</button>
         </div>
+    </div>
+</div>
+
+<div class="service">
+    <div class="container container--service">
+        <div class="header header--service">
+            <h2 class="header__title">
+                What we offer
+            </h2>
+            <h3 class="header__subtitle">
+                Vestibulum elementum ex ullamcorper ligula vulputate
+            </h3>
+        </div>
+        <ul class="service__list">
+            <li class="service__item">
+                <div class="item">
+                    <h3 class="item__header">
+                        Vivamus tincidunt
+                    </h3>
+                    <p class="item__desc">
+                        Fusce velit magna, rutrum id pellentesque in, imperdiet rutrum neque.
+                        Vestibulum elementum ex ullamcorper ligula vulputate, non malesuada nisi ullamcorper. Curabitur
+                        tellus ligula, laoreet vitae lectus vitae
+                    </p>
+                </div>
+            </li>
+            <li class="service__item">
+                <div class="item">
+                    <h3 class="item__header">
+                        Etiam porttitor sagittis ipsum
+                    </h3>
+                    <p class="item__desc">
+                        Fusce velit magna, rutrum id pellentesque in, imperdiet rutrum neque. Vestibulum elementum ex
+                        ullamcorper ligula vulputate, non malesuada nisi ullamcorper. Curabitur tellus ligula, laoreet
+                        vitae lectus vitae
+                    </p>
+                </div>
+            </li>
+            <li class="service__item">
+                <div class="item">
+                    <h3 class="item__header">
+                        Vivamus tincidunt diam a iaculis
+                    </h3>
+                    <p class="item__desc">
+                        Fusce velit magna, rutrum id pellentesque in, imperdiet rutrum neque. Vestibulum elementum ex
+                        ullamcorper ligula vulputate, non malesuada nisi ullamcorper. Curabitur tellus ligula, laoreet
+                        vitae lectus vitae
+                    </p>
+                </div>
+            </li>
+            <li class="service__item">
+                <div class="item">
+                    <h3 class="item__header">
+                        Donec metus augue
+                    </h3>
+                    <p class="item__desc">
+                        Fusce velit magna, rutrum id pellentesque in, imperdiet rutrum neque. Vestibulum elementum ex
+                        ullamcorper ligula vulputate, non malesuada nisi ullamcorper. Curabitur tellus ligula, laoreet
+                        vitae lectus vitae
+                    </p>
+                </div>
+            </li>
+            <li class="service__item">
+                <div class="item">
+                    <h3 class="item__header">
+                        Aliquam sed mollis
+                    </h3>
+                    <p class="item__desc">
+                        Fusce velit magna, rutrum id pellentesque in, imperdiet rutrum neque. Vestibulum elementum ex
+                        ullamcorper ligula vulputate, non malesuada nisi ullamcorper. Curabitur tellus ligula, laoreet
+                        vitae lectus vitae
+                    </p>
+                </div>
+            </li>
+            <li class="service__item">
+                <div class="item">
+                    <h3 class="item__header">
+                        Vestibulum placerat nisl quis
+                    </h3>
+                    <p class="item__desc">
+                        Fusce velit magna, rutrum id pellentesque in, imperdiet rutrum neque. Vestibulum elementum ex
+                        ullamcorper ligula vulputate, non malesuada nisi ullamcorper. Curabitur tellus ligula, laoreet
+                        vitae lectus vitae
+                    </p>
+                </div>
+            </li>
+        </ul>
+    </div>
+</div>
+
+<div class="about">
+    <div class="about__image"></div>
+    <div class="about__article">
+        <article class="article">
+            <h2 class="article__header">
+                Who we are
+            </h2>
+            <div class="article__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dui massa, condimentum a nisl quis,
+                    tristique efficitur erat. Aenean ut suscipit urna. Donec efficitur tristique lobortis. Nullam eu
+                    efficitur lacus, et blandit tellus. Mauris viverra condimentum tellus vitae sollicitudin. Mauris
+                    quis
+                    mattis urna. Suspendisse auctor magna quis ipsum ultrices scelerisque. Vestibulum quis hendrerit
+                    enim.
+                    Aenean viverra aliquam ex, sed ornare risus porta in.
+                </p>
+                <p>
+                    Aenean ut suscipit urna. Donec efficitur tristique lobortis. Nullam eu efficitur lacus, et blandit
+                    tellus. Mauris viverra condimentum tellus vitae sollicitudin. Mauris quis mattis urna. Suspendisse
+                    auctor magna quis ipsum ultrices scelerisque. Vestibulum quis hendrerit enim. Aenean viverra aliquam
+                    ex,
+                    sed ornare risus porta in.
+                </p>
+            </div>
+            <button class="article__button">Read more</button>
+        </article>
+    </div>
+</div>
+
+<div class="portfolio">
+    <div class="portfolio__header">
+        <h2 class="portfolio__heading">
+            See our work
+        </h2>
+        <p class="portfolio__desc">
+            Mauris euismod ac nulla vitae fermentum. Morbi ut mauris massa. Sed condimentum elit volutpat turpis
+            sagittis, in scelerisque dui luctus. Nulla id suscipit velit, a maximus massa.
+        </p>
+        <ul class="list list--portfolio">
+            <li class="list__item">
+                <a href="" class="list__link">
+                    All
+                </a>
+            </li>
+            <li class="list__item">
+                <a href="" class="list__link">
+                    Web
+                </a>
+            </li>
+            <li class="list__item">
+                <a href="" class="list__link">
+                    Logo Design
+                </a>
+            </li>
+            <li class="list__item">
+                <a href="" class="list__link">
+                    Wordpress
+                </a>
+            </li>
+            <li class="list__item">
+                <a href="" class="list__link">
+                    E-Commerce
+                </a>
+            </li>
+        </ul>
     </div>
 </div>
 
