portfolio only desktop

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper wrapper--header">
         <div class="container container--flex">
             <div class="header__logo">
-                <a href="#" class="logo">Business Name</a>
+                <a href="/" class="logo">Business Name</a>
             </div>
             <div class="header__nav">
                 <div class="hamburger">
@@ -52,9 +52,9 @@
 
 <div class="banner">
     <div class="single-item">
-        <div><img src="img/bunner-img.jpg" alt=""></div>
-        <div><img src="img/bunner-img1.jpg" alt=""></div>
-        <div><img src="img/bunner-img2.jpg" alt=""></div>
+        <div><img src="img/bunner-img.jpg" alt="bridge"></div>
+        <div><img src="img/bunner-img1.jpg" alt="city"></div>
+        <div><img src="img/bunner-img2.jpg" alt="london"></div>
     </div>
     <div class="banner__content">
         <div class="container container--banner">
@@ -186,37 +186,114 @@
         <h2 class="portfolio__heading">
             See our work
         </h2>
+        <div class="icon">
+            <i class="fa fa-cog" aria-hidden="true"></i>
+        </div>
         <p class="portfolio__desc">
             Mauris euismod ac nulla vitae fermentum. Morbi ut mauris massa. Sed condimentum elit volutpat turpis
             sagittis, in scelerisque dui luctus. Nulla id suscipit velit, a maximus massa.
         </p>
         <ul class="list list--portfolio">
             <li class="list__item">
-                <a href="" class="list__link">
+                <a href="#" class="list__link">
                     All
                 </a>
             </li>
             <li class="list__item">
-                <a href="" class="list__link">
+                <a href="#" class="list__link">
                     Web
                 </a>
             </li>
             <li class="list__item">
-                <a href="" class="list__link">
+                <a href="#" class="list__link">
                     Logo Design
                 </a>
             </li>
             <li class="list__item">
-                <a href="" class="list__link">
+                <a href="#" class="list__link">
                     Wordpress
                 </a>
             </li>
             <li class="list__item">
-                <a href="" class="list__link">
+                <a href="#" class="list__link">
                     E-Commerce
                 </a>
             </li>
         </ul>
+    </div>
+    <div class="portfolio__gallery">
+        <div class="gallery__item">
+            <a href="#" class="gallery__link">
+                <img src="img/Gallery/Layer%2020.png" alt="gallery__image" class="gallery__image">
+            </a>
+            <div class="item__hover">
+                <img src="img/eye.png" alt="eye">
+                Labore et dolore magnam
+            </div>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="gallery__link">
+                <img src="img/Gallery/Layer%2021.png" alt="gallery__image" class="gallery__image">
+            </a>
+            <div class="item__hover">
+                <img src="img/eye.png" alt="eye">
+                Labore et dolore magnam
+            </div>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="gallery__link">
+                <img src="img/Gallery/Layer%2022.png" alt="gallery__image" class="gallery__image">
+            </a>
+            <div class="item__hover">
+                <img src="img/eye.png" alt="eye">
+                Labore et dolore magnam
+            </div>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="gallery__link">
+                <img src="img/Gallery/Layer%2023.png" alt="gallery__image" class="gallery__image">
+            </a>
+            <div class="item__hover">
+                <img src="img/eye.png" alt="eye">
+                Labore et dolore magnam
+            </div>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="gallery__link">
+                <img src="img/Gallery/Layer%2024.png" alt="gallery__image" class="gallery__image">
+            </a>
+            <div class="item__hover">
+                <img src="img/eye.png" alt="eye">
+                Labore et dolore magnam
+            </div>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="gallery__link">
+                <img src="img/Gallery/Layer%2025.png" alt="gallery__image" class="gallery__image">
+            </a>
+            <div class="item__hover">
+                <img src="img/eye.png" alt="eye">
+                Labore et dolore magnam
+            </div>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="gallery__link">
+                <img src="img/Gallery/Layer%2026.png" alt="gallery__image" class="gallery__image">
+            </a>
+            <div class="item__hover">
+                <img src="img/eye.png" alt="eye">
+                Labore et dolore magnam
+            </div>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="gallery__link">
+                <img src="img/Gallery/Layer%2030.png" alt="gallery__image" class="gallery__image">
+            </a>
+            <div class="item__hover">
+                <img src="img/eye.png" alt="eye">
+                Labore et dolore magnam
+            </div>
+        </div>
     </div>
 </div>
 
