started commets block

--- a/app/index.html
+++ b/app/index.html
@@ -183,7 +183,7 @@
 
 <div class="portfolio">
     <div class="portfolio__header">
-        <h2 class="portfolio__heading">
+        <h2 class="heading">
             See our work
         </h2>
         <div class="icon">
@@ -292,6 +292,82 @@
             <div class="item__hover">
                 <img src="img/eye.png" alt="eye">
                 Labore et dolore magnam
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="comments">
+    <div class="container">
+        <h2 class="heading">
+            Testimonials
+        </h2>
+        <div class="icon">
+            <i class="fa fa-comments-o" aria-hidden="true"></i>
+        </div>
+        <div class="multiple-items">
+            <div>
+                <div class="comment">
+                    <div class="comment__text">
+                        “Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consec tetur, adipisci velit,
+                        sed
+                        quia non numquam eius modi tempora incidunt utis labore et dolore magnam aliquam quaerat
+                        voluptatem.
+                        Ut enim ad minimas veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
+                        ut
+                        aliquid amet untras vel illum qui.”
+                    </div>
+                    <div class="customer">
+                    <span class="customer__name">
+                        Jon Doe,
+                    </span>
+                        <span class="customer__company">
+                        Company Inc.
+                    </span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="comment">
+                    <div class="comment__text">
+                        “Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consec tetur, adipisci velit,
+                        sed
+                        quia non numquam eius modi tempora incidunt utis labore et dolore magnam aliquam quaerat
+                        voluptatem.
+                        Ut enim ad minimas veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
+                        ut
+                        aliquid amet untras vel illum qui.”
+                    </div>
+                    <div class="customer">
+                    <span class="customer__name">
+                        Jon Doe,
+                    </span>
+                        <span class="customer__company">
+                        Company Inc.
+                    </span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="comment">
+                    <div class="comment__text">
+                        “Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consec tetur, adipisci velit,
+                        sed
+                        quia non numquam eius modi tempora incidunt utis labore et dolore magnam aliquam quaerat
+                        voluptatem.
+                        Ut enim ad minimas veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
+                        ut
+                        aliquid amet untras vel illum qui.”
+                    </div>
+                    <div class="customer">
+                    <span class="customer__name">
+                        Jon Doe,
+                    </span>
+                        <span class="customer__company">
+                        Company Inc.
+                    </span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
