--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Unique</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -372,6 +371,111 @@
         </div>
     </div>
 </div>
+
+<footer class="footer">
+    <div class="newsline">
+        <div class="container container--flex container--footer">
+            <div class="newsline__block company">
+                <h2 class="logo logo--footer">Business Name</h2>
+                <p class="company__desc">
+                    Donec vitae cursus quam. Etiam dignissim, nulla a congue auctor, massa urna cursus enim, id sodales
+                    elit ligula quis diam. Morbi ut semper augue. Fusce sit amet lectus turpis. Integer a cursus tellus,
+                    et imperdiet purus. Donec sed orci placerat, vulputate risus id, faucibus massa. Mauris justo arcu,
+                    faucibus at nunc quis
+                </p>
+            </div>
+            <div class="newsline__block contacts">
+                <h2 class="contacts__header">
+                    Contact
+                </h2>
+                <p class="contacts__text">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in so
+                </p>
+                    <a href="https://goo.gl/maps/XFqreQ5kUTn" class="address" target="_blank">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        <span class="contact__text adress__text">KPI metro station</span>
+                    </a>
+                    <a href="mailto:maks.chuprina@gmail.com" class="email">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <span class="contact__text email__text">maks.chuprina@gmail.com</span>
+                    </a>
+                    <a href="tel:+380991304213" class="phone-number">
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <span class="contact__text phone-number__text">+380991304213</span>
+                    </a>
+            </div>
+            <div class="newsline__block tweets">
+                <h2 class="tweets__header">
+                    Latest Tweets
+                </h2>
+                <div class="tweet">
+                    <p class="tweet__text">
+                        Curabitur felis nibh, lacinia non rhoncus vel, lobortis et lorem. Class aptent taciti sociosqu
+                        ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse sit amet varius est,
+                        ut varius risus. Integer sed aliquam sem. Suspendisse venenatis viverra ipsum nec
+                        consecteturstandard dummy
+                    </p>
+                    <a href="#" class="tweet__link">
+                        5 Hours Ago
+                    </a>
+                </div>
+                <div class="tweet">
+                    <p class="tweet__text">
+                        Curabitur felis nibh, lacinia non rhoncus vel, lobortis et lorem. Class aptent taciti sociosqu
+                        ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse sit amet varius est,
+                        ut varius risus. Integer sed aliquam sem. Suspendisse venenatis viverra ipsum nec
+                        consecteturstandard dummy
+                    </p>
+                    <a href="#" class="tweet__link">
+                        6 Hours Ago
+                    </a>
+                </div>
+            </div>
+            <div class="newsline__block subscribe">
+                <h2 class="subscribe__header">
+                    News Letter
+                </h2>
+                <div class="subscribe__text">
+                    Type your email address below and recive our daily news letter for free
+                </div>
+                <form class="subscribe__form">
+                    <input class="subscribe__email" type="email" value="Email Address">
+                    <input class="subscribe__button" type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="copyright-line">
+        <div class="container container--flex container--copyright">
+            <p class="copyright">
+                &copy; 2015 Business name.All rights reserved.
+            </p>
+            <p class="designed">
+                Designed by Colorpixels.net
+            </p>
+            <div class="social">
+                <ul class="social__items">
+                    <ul class="social__item">
+                        <a href="#" class="social__link">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                    </ul>
+                    <ul class="social__item">
+                        <a href="#" class="social__link">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                    </ul>
+                    <ul class="social__item">
+                        <a href="#" class="social__link">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </a>
+                    </ul>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="js/libs.min.js"></script>
 <script src="js/common.js"></script>
