mobile version footer

--- a/app/index.html
+++ b/app/index.html
@@ -440,7 +440,7 @@
                     Type your email address below and recive our daily news letter for free
                 </div>
                 <form class="subscribe__form">
-                    <input class="subscribe__email" type="email" value="Email Address">
+                    <input class="subscribe__email" type="email" placeholder="Email Address">
                     <input class="subscribe__button" type="submit" value="Submit">
                 </form>
             </div>
