--- a/app/index.html
+++ b/app/index.html
@@ -304,7 +304,49 @@
         <div class="icon">
             <i class="fa fa-comments-o" aria-hidden="true"></i>
         </div>
-        <div class="multiple-items">
+        <div class="responsive">
+            <div>
+                <div class="comment">
+                    <div class="comment__text">
+                        “Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consec tetur, adipisci velit,
+                        sed
+                        quia non numquam eius modi tempora incidunt utis labore et dolore magnam aliquam quaerat
+                        voluptatem.
+                        Ut enim ad minimas veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
+                        ut
+                        aliquid amet untras vel illum qui.”
+                    </div>
+                    <div class="customer">
+                    <span class="customer__name">
+                        Jon Doe,
+                    </span>
+                        <span class="customer__company">
+                        Company Inc.
+                    </span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="comment">
+                    <div class="comment__text">
+                        “Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consec tetur, adipisci velit,
+                        sed
+                        quia non numquam eius modi tempora incidunt utis labore et dolore magnam aliquam quaerat
+                        voluptatem.
+                        Ut enim ad minimas veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
+                        ut
+                        aliquid amet untras vel illum qui.”
+                    </div>
+                    <div class="customer">
+                    <span class="customer__name">
+                        Jon Doe,
+                    </span>
+                        <span class="customer__company">
+                        Company Inc.
+                    </span>
+                    </div>
+                </div>
+            </div>
             <div>
                 <div class="comment">
                     <div class="comment__text">
